      LP: #336800)
  * fix crash when no network is avaialble for changelog fetching
    (LP: #334002)
  * debian/control:
    - add conflict against update-manager-kde to update-manager-hildon
      (LP: #333464)
  * UpdateManager/Core/MyCache.py:
    - show proper urls for sources with epochs (LP: #328164), thanks
      to Richie

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 04 Mar 2009 17:28:08 +0100


update-manager (1:0.99) jaunty; urgency=low

  [ Michael Vogt ]
  * DistUpgrade/DistUpgradeController.py:
    - enable apport crash capturing during upgrades
  * DistUpgrade/DistUpgradeView.py:
    - create /var/lib/pycentral/pkgremove before the upgrade to
      help pycentral transition to the new python policy (thanks
      to doko)
  * ensure pidgin-libnotify is ugpraded (LP: #332328)
  * better wording for aborts (thanks to Gabor Kelemen and
    Jean-Baptiste Lallement), LP: #289303
  * wording fixes, thanks to Brian Murray and Gabor Kelemen 
    LP: #269583
  * i18n fix, thanks to Gabor Kelemen, LP: #331821
  * support /etc/update-manager/release-upgrades.d/ directory
    for local overrides of the upgrade process. Useful to force
    certain site-specific options (like third party repository
    handling)
  * allow "[FreeSpace]\nSkipCheck=yes" override to skip free 
    space checks (useful for testing)
  * support "[Sources"]\nAllowThirdParty=yes" override to skip
    commenting out of unknown repositories (LP: #147080)
  * debian/*.install:
    - updated for the new python layout (/u/l/p/dist-packages instead of
      /u/l/p/site-packages)
  * debian/rules:
    - use DH_PYCENTRAL=include-links instead of "nomove"
    - use "--install-layout=deb" in distutils
  * debian/control:
    - use "XS-Python-Version: all" instead of current
  * DistUpgrade/DistUpgradeCache.py:
    - fix modalias path in NvidiaDetector
  * data/glade/UpdateManager.glade:
    - add "settings" button
  * UpdateManager/UpdateManager.py: