@@ -19,6 +19,9 @@ update-manager (1:0.100) UNRELEASED; urgency=low
   * UpdateManager/Core/MyCache.py:
     - show proper urls for sources with epochs (LP: #328164), thanks
       to Richie
+  * UpdateManager/ChangelogViewer.py:
+    - support copy to clipboard for URLs (LP: #85644), thanks to
+      Richie
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 04 Mar 2009 17:28:08 +0100
 
